registered djikstra program